<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="g.rezza.moch.grupia.RegisterActivity">

    <RelativeLayout
        android:id="@+id/rvly_header_00"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@color/green">

    </RelativeLayout>

    <ScrollView
        android:layout_below="@+id/rvly_header_00"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_centerHorizontal="true"
            android:paddingLeft="@dimen/size_20dp"
            android:paddingRight="@dimen/size_20dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:gravity="center_vertical"
                android:textSize="@dimen/size_18sp"
                android:textColor="@color/green"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_50dp"
                android:text="@string/register_new_account" />

            <TextView
                android:gravity="center_vertical"
                android:textSize="@dimen/size_16sp"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/size_5dp"
                android:text="@string/select_community" />
            <EditText
                android:id="@+id/edtx_code_00"
                android:background="@drawable/editext_custom_01"
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_45dp"
                android:textSize="@dimen/size_16sp"
                android:hint="@string/code_community"
                android:layout_marginBottom="@dimen/size_2dp"
                android:padding="@dimen/size_5dp"
                android:inputType="text" />

            <TextView
                android:layout_marginTop="@dimen/size_10dp"
                android:gravity="center_vertical"
                android:textSize="@dimen/size_16sp"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/size_5dp"
                android:text="@string/account_data" />
            <EditText
                android:id="@+id/edtx_fullname_00"
                android:background="@drawable/editext_custom_01"
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_45dp"
                android:textSize="@dimen/size_16sp"
                android:hint="@string/full_name"
                android:layout_marginBottom="@dimen/size_5dp"
                android:padding="@dimen/size_5dp"
                android:inputType="text" />
            <EditText
                android:id="@+id/edtx_email_00"
                android:background="@drawable/editext_custom_01"
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_45dp"
                android:textSize="@dimen/size_16sp"
                android:hint="@string/email"
                android:layout_marginBottom="@dimen/size_5dp"
                android:padding="@dimen/size_5dp"
                android:inputType="textEmailAddress" />
            <EditText
                android:id="@+id/edtx_phone_00"
                android:background="@drawable/editext_custom_01"
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_45dp"
                android:textSize="@dimen/size_16sp"
                android:hint="@string/phone"
                android:layout_marginBottom="@dimen/size_2dp"
                android:padding="@dimen/size_5dp"
                android:inputType="phone" />

            <TextView
                android:layout_marginTop="@dimen/size_10dp"
                android:gravity="center_vertical"
                android:textSize="@dimen/size_16sp"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/size_5dp"
                android:text="@string/register_new_account" />
            <EditText
                android:id="@+id/edtx_username_00"

                android:background="@drawable/editext_custom_01"
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_45dp"
                android:textSize="@dimen/size_16sp"
                android:hint="@string/account"
                android:layout_marginBottom="@dimen/size_5dp"
                android:padding="@dimen/size_5dp"
                android:inputType="text" />
            <EditText
                android:id="@+id/edtx_password_00"
                android:background="@drawable/editext_custom_01"
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_45dp"
                android:textSize="@dimen/size_16sp"
                android:hint="@string/password"
                android:layout_marginBottom="@dimen/size_2dp"
                android:padding="@dimen/size_5dp"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/bbtn_register_00"
                android:layout_marginTop="@dimen/size_20dp"
                style="@style/TextView.White.Casual"
                android:layout_width="match_parent"
                android:background="@drawable/button_green"
                android:textAllCaps="false"
                android:layout_height="@dimen/size_45dp"
                android:layout_marginBottom="@dimen/size_40dp"
                android:textSize="@dimen/size_16sp"
                android:text="@string/button_register" />
        </LinearLayout>

    </ScrollView>

</RelativeLayout>
