<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center"

    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/imvw_profile_00"
            android:layout_width="@dimen/size_180dp"
            android:layout_height="@dimen/size_180dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/test_profile"
            app:civ_border_color="@color/white"
            app:civ_border_width="1dp" />

        <TextView
            android:id="@+id/txvw_name_00"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imvw_profile_00"
            android:gravity="center"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            android:text="Sarah Adelia"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/green"
            android:textSize="@dimen/size_25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txvw_club_00"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txvw_name_00"
            android:gravity="center"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            android:text="HR-V Club Indonesia"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="@dimen/size_18sp" />

        <TextView
            android:id="@+id/txvw_capter_00"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txvw_club_00"
            android:gravity="center"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            android:text="Chapter Jakarta"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="@dimen/size_18sp" />

        <TextView
            android:id="@+id/txvw_code_00"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txvw_capter_00"
            android:gravity="center"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            android:text="B010"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="@dimen/size_25sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <LinearLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_150dp"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/lnly_foto_00"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@drawable/button_green"
            android:layout_width="@dimen/size_100dp"
            android:layout_height="@dimen/size_100dp">

            <ImageView
                android:layout_width="@dimen/size_70dp"
                android:layout_height="@dimen/size_65dp"
                android:scaleType="fitXY"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                app:srcCompat="@mipmap/ic_camera" />

            <TextView
                android:layout_marginTop="@dimen/size_10dp_negative"
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_30dp"
                android:gravity="center"
                android:textColor="@color/white"
                android:text="@string/photo"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="@dimen/size_18sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/lnly_profile_00"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginLeft="@dimen/size_10dp"
            android:layout_marginRight="@dimen/size_10dp"
            android:background="@drawable/button_green"
            android:layout_width="@dimen/size_100dp"
            android:layout_height="@dimen/size_100dp">

            <ImageView
                android:layout_width="@dimen/size_70dp"
                android:layout_height="@dimen/size_65dp"
                android:scaleType="fitXY"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                app:srcCompat="@mipmap/ic_profile" />

            <TextView
                android:layout_marginTop="@dimen/size_10dp_negative"
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_30dp"
                android:gravity="center"
                android:textColor="@color/white"
                android:text="@string/profile"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="@dimen/size_18sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lnly_account_00"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginRight="@dimen/size_10dp"
            android:background="@drawable/button_green"
            android:layout_width="@dimen/size_100dp"
            android:layout_height="@dimen/size_100dp">

            <ImageView
                android:layout_width="@dimen/size_70dp"
                android:layout_height="@dimen/size_65dp"
                android:scaleType="fitXY"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                app:srcCompat="@mipmap/ic_setting" />

            <TextView
                android:layout_marginTop="@dimen/size_10dp_negative"
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_30dp"
                android:gravity="center"
                android:textColor="@color/white"
                android:text="@string/account"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="@dimen/size_18sp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
